<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DatosEventoActivity"
    android:background="@color/fondo">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="15dp"
        android:textColor="@color/black"
        android:text="@string/enunciado"
        android:textSize="32sp" />

    <EditText
        android:id="@+id/tituloEvento"
        android:layout_width="285dp"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/nombreEvento"
        android:textColorHint="@color/hint"/>

    <EditText
        android:id="@+id/lugarEvento"
        android:layout_width="285dp"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/lugarEvento"
        android:textColorHint="@color/hint"/>

    <Button
        android:id="@+id/boton3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_gravity="center"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="50dp"
        android:backgroundTint="@color/orange"
        android:text="@string/añadirEvento"
        android:onClick="abrirPantalla1" />

</GridLayout>