<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/fondo"
    tools:context=".MapsActivity">

    <TextView
        android:id="@+id/verNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/black"
        android:text="@string/nombreEvento"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/verDireccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/black"
        android:text="@string/datehourEvento"
        android:textSize="18sp" />

    <Button
        android:id="@+id/boton1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/orange"
        android:text="@string/añadirEvento"
        android:onClick="abrirPantalla2"/>

<fragment xmlns:map="http://schemas.android.com/apk/res-auto"
    android:id="@+id/map"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapsActivity"
    map:cameraZoom="7"/>

</LinearLayout>